--- a/assets/img/common/favicon/manifest.json
+++ b/assets/img/common/favicon/manifest.json
@@ -2,37 +2,37 @@
 	"name": "VSApp",
 	"icons": [
 		{
-			"src": "assets\/img\/common\/favicon\/Shayar_logo_512_whitebg.png",
+			"src": "assets\/img\/common\/favicon\/circle_logo_shayar.png",
 			"sizes": "36x36",
 			"type": "image\/png",
 			"density": 0.75
 		},
 		{
-			"src": "assets\/img\/common\/favicon\/Shayar_logo_512_whitebg.png",
+			"src": "assets\/img\/common\/favicon\/circle_logo_shayar.png",
 			"sizes": "48x48",
 			"type": "image\/png",
 			"density": 1
 		},
 		{
-			"src": "assets\/img\/common\/favicon\/Shayar_logo_512_whitebg.png",
+			"src": "assets\/img\/common\/favicon\/circle_logo_shayar.png",
 			"sizes": "72x72",
 			"type": "image\/png",
 			"density": 1.5
 		},
 		{
-			"src": "assets\/img\/common\/favicon\/Shayar_logo_512_whitebg.png",
+			"src": "assets\/img\/common\/favicon\/circle_logo_shayar.png",
 			"sizes": "96x96",
 			"type": "image\/png",
 			"density": 2
 		},
 		{
-			"src": "assets\/img\/common\/favicon\/Shayar_logo_512_whitebg.png",
+			"src": "assets\/img\/common\/favicon\/circle_logo_shayar.png",
 			"sizes": "144x144",
 			"type": "image\/png",
 			"density": 3
 		},
 		{
-			"src": "assets\/img\/common\/favicon\/Shayar_logo_512_whitebg.png",
+			"src": "assets\/img\/common\/favicon\/circle_logo_shayar.png",
 			"sizes": "192x192",
 			"type": "image\/png",
 			"density": 4
